Add automation scripts for Excel report generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 project_2/build/
 project_2/dist/
 project_2/news-headlines-script.spec
+
+project_3/build/
+project_3/dist/
+project_3/automate-excel.spec
